--- a/itRacedData/assets/styles/index.css
+++ b/itRacedData/assets/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .button {
   background: #58A086;
   padding: 10px 15px;
@@ -60,6 +61,49 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+}
+.header .header__content #menu__toggle {
+  opacity: 0;
+}
+.header .header__content .menu__btn {
+  display: flex;
+  /* используем flex для центрирования содержимого */
+  align-items: center;
+  /* центрируем содержимое кнопки */
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.header .header__content .menu__btn > span,
+.header .header__content .menu__btn > span::before,
+.header .header__content .menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 40px;
+  right: 0;
+  height: 4px;
+  background-color: #1A4043;
+  transition: 0.5s ease-in-out;
+}
+.header .header__content .menu__btn > span {
+  width: 40px;
+}
+.header .header__content .menu__btn > span::before {
+  content: "";
+  top: -11px;
+}
+.header .header__content .menu__btn > span::after {
+  content: "";
+  top: 11px;
+}
+.header .header__content #menu__toggle, .header .header__content .menu__btn {
+  display: none;
 }
 .header .header__content .header__navigation {
   margin-left: auto;
@@ -191,9 +235,11 @@
   margin-top: 10px;
 }
 .advantage .wrapper .advantage__content .wrapper__advantages {
+  margin-top: 82px;
+}
+.advantage .wrapper .advantage__content .wrapper__advantages .blocks {
   display: flex;
   justify-content: space-between;
-  margin-top: 82px;
 }
 .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage {
   flex-basis: 16%;
@@ -240,10 +286,12 @@
   text-align: center;
 }
 .service .wrapper .service__content .service-content__section {
+  margin-top: 40px;
+}
+.service .wrapper .service__content .service-content__section .wrapper__services {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 40px;
 }
 .service .wrapper .service__content .service-content__section .wrapper__services .service__item {
   display: flex;
@@ -544,7 +592,7 @@
     justify-content: space-around;
   }
   .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage {
-    flex-basis: 28%;
+    width: 28%;
     padding: 0 3%;
     margin-bottom: 70px;
   }
@@ -552,6 +600,9 @@
     margin-top: 0;
   }
 
+  .service .wrapper .service__content {
+    overflow: hidden;
+  }
   .service .wrapper .service__content .service-content__section {
     flex-wrap: wrap;
     justify-content: space-around;
@@ -573,8 +624,45 @@
   }
 }
 @media (max-width: 680px) {
-  .header__navigation {
-    display: none;
+  .header .header__content .menu__btn {
+    display: block;
+  }
+  .header .header__content #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  .header .header__content #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  .header .header__content #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  .header .header__content #menu__toggle:checked ~ .header__navigation {
+    visibility: visible;
+    right: 0;
+  }
+
+  .header .header__content .header__navigation {
+    visibility: hidden;
+    margin: 0;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.5);
+    transition: 0.5s ease-in-out;
+  }
+  .header .header__content .header__navigation .navigation__list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 70%;
+    background: #fff;
+    margin-left: auto;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   }
 
   .header .button {
@@ -596,5 +684,210 @@
   .it-raced-data .wrapper .it-raced-data__content .it-raced-data__first-img::after {
     right: -395px;
     font-size: 60px;
+  }
+
+  .advantage .wrapper .advantage__content .wrapper__advantages {
+    position: relative;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .left-arrow {
+    position: absolute;
+    left: 0;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .right-arrow {
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .blocks {
+    width: 100%;
+    justify-content: center;
+    overflow: hidden;
+    height: 110px;
+    align-items: center;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage {
+    display: none;
+    position: relative;
+    margin-bottom: 0;
+    animation: 0.5s ease-in-out;
+    padding: 0;
+    flex-basis: none;
+    width: 100%;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage::before {
+    top: -10px;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage:hover::before {
+    top: -10px;
+    width: 50%;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage .block-advantage__paragraph {
+    width: 200px;
+    margin: auto;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.active, .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.next {
+    display: flex;
+    align-items: center;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.next {
+    position: absolute;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.to-left {
+    animation-name: left;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.to-right {
+    animation-name: right;
+    animation-direction: reverse;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.from-left {
+    animation-name: left;
+    animation-direction: reverse;
+  }
+  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage.from-right {
+    animation-name: right;
+  }
+  .advantage .wrapper .advantage__content .button {
+    margin-top: 20px;
+  }
+
+  .service .wrapper .service__content .service-content__section {
+    position: relative;
+  }
+  .service .wrapper .service__content .service-content__section .arrow-left {
+    position: absolute;
+    left: 0;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  .service .wrapper .service__content .service-content__section .arrow-right {
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  .service .wrapper .service__content .service-content__section .img {
+    display: none;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item {
+    display: none;
+    position: relative;
+    animation: 0.5s ease-in-out;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.active, .service .wrapper .service__content .service-content__section .wrapper__services .service__item.next {
+    display: flex;
+    align-items: center;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.next {
+    position: absolute;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.to-left {
+    animation-name: left;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.to-right {
+    animation-name: right;
+    animation-direction: reverse;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.from-left {
+    animation-name: left;
+    animation-direction: reverse;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item.from-right {
+    animation-name: right;
+  }
+
+  .contact .contact__content .contact__img {
+    display: none;
+  }
+  .contact .contact__content form {
+    width: 100%;
+  }
+  .contact .contact__content form .input {
+    flex-basis: 100%;
+  }
+
+  .footer {
+    overflow: none;
+  }
+  .footer .footer-block {
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+  }
+  .footer .footer-block .footer__navigation {
+    width: 100%;
+    margin-top: 30px;
+  }
+  .footer .footer-block .button {
+    margin: 20px auto 0;
+  }
+  .footer .footer-block::before {
+    left: 0;
+    top: 70px;
+  }
+  .footer .footer-description {
+    flex-direction: column;
+  }
+  .footer .footer-description .left-block {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    order: 2;
+  }
+  .footer .footer-description .left-block .socials {
+    display: flex;
+    order: 1;
+  }
+  .footer .footer-description .left-block .span {
+    max-width: 97px;
+  }
+  .footer .footer-description .text {
+    order: 1;
+    width: 100%;
+  }
+  .footer .footer-description .right-block {
+    order: 3;
+    z-index: 1000;
+  }
+}
+@keyframes left {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+@keyframes right {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
   }
 }
