--- a/itRacedData/assets/styles/index.css
+++ b/itRacedData/assets/styles/index.css
@@ -48,7 +48,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 10000;
 }
 .header .wrapper {
   max-width: 1033px;
@@ -126,6 +126,9 @@
   color: #1A4043;
   position: relative;
 }
+.header .header__content .header__navigation .navigation__item.active {
+  font-weight: 700;
+}
 .header .header__content .header__navigation .navigation__item:hover {
   font-weight: 700;
 }
@@ -150,6 +153,17 @@
   width: 100%;
   height: 100%;
   position: relative;
+}
+.it-raced-data .wrapper .it-raced-data__content::after {
+  content: "Researching Property Records of NYC Agencies Since 1975";
+  position: absolute;
+  bottom: -40px;
+  right: -35px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #1A4043;
+  line-height: 25px;
 }
 .it-raced-data .wrapper .it-raced-data__content .it-raced-data__first-img {
   height: 100%;
@@ -237,6 +251,9 @@
 .advantage .wrapper .advantage__content .wrapper__advantages {
   margin-top: 82px;
 }
+.advantage .wrapper .advantage__content .wrapper__advantages .left-arrow, .advantage .wrapper .advantage__content .wrapper__advantages .right-arrow {
+  display: none;
+}
 .advantage .wrapper .advantage__content .wrapper__advantages .blocks {
   display: flex;
   justify-content: space-between;
@@ -248,7 +265,7 @@
 }
 .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage::before {
   content: "";
-  width: 50%;
+  width: 100px;
   position: absolute;
   left: 50%;
   height: 2px;
@@ -260,10 +277,6 @@
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
-}
-.advantage .wrapper .advantage__content .wrapper__advantages .block-advantage:hover::before {
-  top: -26px;
-  width: 80%;
 }
 .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage .block-advantage__paragraph {
   line-height: 22px;
@@ -287,6 +300,9 @@
 }
 .service .wrapper .service__content .service-content__section {
   margin-top: 40px;
+}
+.service .wrapper .service__content .service-content__section .arrow-left, .service .wrapper .service__content .service-content__section .arrow-right {
+  display: none;
 }
 .service .wrapper .service__content .service-content__section .wrapper__services {
   display: flex;
@@ -484,6 +500,9 @@
   color: #fff;
   font-weight: 300;
 }
+.footer .footer-block .footer__navigation .navigation__list .list__link.active {
+  font-weight: 700;
+}
 .footer .footer-block .footer__navigation .navigation__list .list__link:hover {
   font-weight: 700;
 }
@@ -561,6 +580,17 @@
     align-items: center;
     justify-content: center;
   }
+  .it-raced-data .wrapper .it-raced-data__content::after {
+    right: auto;
+    bottom: -50px;
+    left: 50%;
+    text-align: center;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+  }
   .it-raced-data .wrapper .it-raced-data__content .it-raced-data__second-img {
     display: none;
   }
@@ -572,10 +602,10 @@
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
     color: #1A4043;
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 700;
     position: absolute;
-    right: -113%;
+    right: -95%;
     top: 50%;
     transform: translate(-50%, -50%) rotate(90deg);
     -webkit-transform: translate(-50%, -50%) rotate(90deg);
@@ -587,12 +617,12 @@
   .advantage {
     padding-top: 10px;
   }
-  .advantage .wrapper .advantage__content .wrapper__advantages {
+  .advantage .wrapper .advantage__content .wrapper__advantages .blocks {
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
   }
-  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage {
-    width: 28%;
+  .advantage .wrapper .advantage__content .wrapper__advantages .blocks .block-advantage {
+    flex-basis: 33%;
     padding: 0 3%;
     margin-bottom: 70px;
   }
@@ -600,6 +630,9 @@
     margin-top: 0;
   }
 
+  .service {
+    padding-top: 40px;
+  }
   .service .wrapper .service__content {
     overflow: hidden;
   }
@@ -608,19 +641,39 @@
     justify-content: space-around;
   }
   .service .wrapper .service__content .service-content__section .wrapper__services {
-    margin-top: 20px;
-    order: 2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 40px;
   }
   .service .wrapper .service__content .service-content__section .img {
-    order: 1;
+    order: 0;
     flex-basis: 100%;
+    margin-bottom: 20px;
+  }
+  .service .wrapper .service__content .service-content__section .first-column {
+    order: 1;
+  }
+  .service .wrapper .service__content .service-content__section .second-column {
+    order: 2;
   }
 
+  .contact {
+    padding-bottom: 40px;
+  }
   .contact .contact__content {
     justify-content: center;
   }
   .contact .contact__img {
     display: none;
+  }
+
+  .footer .footer-block .footer__navigation {
+    margin: 0 auto;
+    width: 50%;
+  }
+  .footer .footer-description .text {
+    margin-right: auto;
   }
 }
 @media (max-width: 680px) {
@@ -629,14 +682,26 @@
   }
   .header .header__content #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
   }
   .header .header__content #menu__toggle:checked ~ .menu__btn > span::before {
     top: 0;
     transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
   }
   .header .header__content #menu__toggle:checked ~ .menu__btn > span::after {
     top: 0;
     transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
   }
   .header .header__content #menu__toggle:checked ~ .header__navigation {
     visibility: visible;
@@ -664,6 +729,9 @@
     margin-left: auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   }
+  .header .header__content .header__navigation .navigation__list .list__item {
+    margin-bottom: 30px;
+  }
 
   .header .button {
     display: none;
@@ -677,6 +745,14 @@
     align-items: flex-end;
     justify-content: start;
   }
+  .it-raced-data .wrapper .it-raced-data__content::after {
+    bottom: -60px;
+    max-width: 224px;
+    left: 0;
+    right: auto;
+    font-size: 14px;
+    transform: translateX(-2%);
+  }
   .it-raced-data .wrapper .it-raced-data__content .it-raced-data__first-img {
     width: 80%;
     height: 70%;
@@ -688,8 +764,10 @@
 
   .advantage .wrapper .advantage__content .wrapper__advantages {
     position: relative;
+    margin-top: 40px;
   }
   .advantage .wrapper .advantage__content .wrapper__advantages .left-arrow {
+    display: block;
     position: absolute;
     left: 0;
     cursor: pointer;
@@ -701,6 +779,7 @@
     -o-transform: translateY(-50%);
   }
   .advantage .wrapper .advantage__content .wrapper__advantages .right-arrow {
+    display: block;
     position: absolute;
     right: 0;
     cursor: pointer;
@@ -729,10 +808,6 @@
   }
   .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage::before {
     top: -10px;
-  }
-  .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage:hover::before {
-    top: -10px;
-    width: 50%;
   }
   .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage .block-advantage__paragraph {
     width: 200px;
@@ -765,24 +840,29 @@
 
   .service .wrapper .service__content .service-content__section {
     position: relative;
+    min-height: 110px;
   }
   .service .wrapper .service__content .service-content__section .arrow-left {
+    display: block;
     position: absolute;
     left: 0;
     cursor: pointer;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 2;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
   }
   .service .wrapper .service__content .service-content__section .arrow-right {
+    display: block;
     position: absolute;
     right: 0;
     cursor: pointer;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 2;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -791,17 +871,42 @@
   .service .wrapper .service__content .service-content__section .img {
     display: none;
   }
+  .service .wrapper .service__content .service-content__section .first-column, .service .wrapper .service__content .service-content__section .second-column {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .first-column, .service .wrapper .service__content .service-content__section .wrapper__services .second-column {
+    display: flex;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item {
+    margin-bottom: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item .service-item__title {
+    text-align: center;
+  }
+  .service .wrapper .service__content .service-content__section .wrapper__services .service__item .service-item__subtitle {
+    text-align: center;
+  }
   .service .wrapper .service__content .service-content__section .wrapper__services .service__item {
     display: none;
     position: relative;
     animation: 0.5s ease-in-out;
+    margin: 0 auto;
   }
   .service .wrapper .service__content .service-content__section .wrapper__services .service__item.active, .service .wrapper .service__content .service-content__section .wrapper__services .service__item.next {
     display: flex;
+    justify-content: center;
     align-items: center;
+    margin-bottom: 0;
   }
   .service .wrapper .service__content .service-content__section .wrapper__services .service__item.next {
     position: absolute;
+    top: 0;
+    width: 100%;
   }
   .service .wrapper .service__content .service-content__section .wrapper__services .service__item.to-left {
     animation-name: left;
@@ -818,6 +923,14 @@
     animation-name: right;
   }
 
+  .advantage .wrapper .advantage__content .wrapper__advantages .blocks .block-advantage {
+    margin-bottom: 0;
+  }
+
+  .contact {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .contact .contact__content .contact__img {
     display: none;
   }
@@ -826,6 +939,12 @@
   }
   .contact .contact__content form .input {
     flex-basis: 100%;
+  }
+  .contact .contact__content form .button {
+    width: 80%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    font-size: 18px;
   }
 
   .footer {
@@ -838,10 +957,11 @@
   }
   .footer .footer-block .footer__navigation {
     width: 100%;
-    margin-top: 30px;
+    margin-top: 45px;
   }
   .footer .footer-block .button {
     margin: 20px auto 0;
+    padding: 15px 20px;
   }
   .footer .footer-block::before {
     left: 0;
@@ -851,8 +971,7 @@
     flex-direction: column;
   }
   .footer .footer-description .left-block {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 20px 0;
     display: flex;
     width: 100%;
     align-items: center;
@@ -862,13 +981,27 @@
   .footer .footer-description .left-block .socials {
     display: flex;
     order: 1;
+    margin-bottom: 0;
   }
   .footer .footer-description .left-block .span {
-    max-width: 97px;
+    max-width: 105px;
   }
   .footer .footer-description .text {
     order: 1;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 20px auto 0;
+  }
+  .footer .footer-description .text span:first-child {
+    order: 2;
+    padding: 0;
+  }
+  .footer .footer-description .text span:last-child {
+    order: 1;
+    flex-basis: 100%;
+    padding: 0;
   }
   .footer .footer-description .right-block {
     order: 3;
