--- a/itRacedData/assets/styles/index.scss
+++ b/itRacedData/assets/styles/index.scss
@@ -62,7 +62,7 @@ $font: 'Open Sans', sans-serif;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 10000;
 
     .wrapper {
         max-width: 1033px;
@@ -149,12 +149,16 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
+
+                &.active {
+                    font-weight: 700;
+                }
             }
 
             .navigation__item:hover {
                 font-weight: 700;
                 
-            }
+            } 
 
             // .navigation__item {
             //     margin-left: 20px;
@@ -176,12 +180,25 @@ $font: 'Open Sans', sans-serif;
         box-sizing: border-box;
 
         .it-raced-data__content {
+            
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
             width: 100%;
             height: 100%;
             position: relative;
+
+            &::after{
+                content: "Researching Property Records of NYC Agencies Since 1975";
+                position: absolute;
+                bottom: -40px;
+                right: -35px;
+                font-family: $font;
+                font-size: 18px;
+                font-weight: bold;
+                color: #1A4043;
+                line-height: 25px;
+            }
 
             .it-raced-data__first-img {
                 height: 100%;
@@ -284,6 +301,9 @@ $font: 'Open Sans', sans-serif;
             .wrapper__advantages {
                 
                 margin-top: 82px;
+                .left-arrow, .right-arrow {
+                    display: none;
+                }
                 
                 .blocks{
                     display: flex;
@@ -297,7 +317,7 @@ $font: 'Open Sans', sans-serif;
 
                     &::before {
                         content: "";
-                        width: 50%;
+                        width: 100px;
                         position: absolute;
                         left: 50%;
                         height: 2px;
@@ -311,10 +331,10 @@ $font: 'Open Sans', sans-serif;
                         -o-transform: translateX(-50%);
                     }
 
-                    &:hover::before {
-                        top:-26px;
-                        width: 80%;
-                    }
+                    // &:hover::before {
+                    //     top:-26px;
+                    //     width: 80%;
+                    // }
 
                     .block-advantage__paragraph {
                         @extend %text-style;
@@ -345,7 +365,9 @@ $font: 'Open Sans', sans-serif;
         .service__content {
             text-align: center;
             .service-content__section {
-                
+                .arrow-left, .arrow-right {
+                    display: none;
+                }
                 margin-top: 40px;
 
                 .wrapper__services {
@@ -592,7 +614,9 @@ $font: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #fff;
                     font-weight: 300;
-
+                    &.active {
+                        font-weight: 700;
+                    }
                     &:hover {
                         font-weight: 700;
                     }
@@ -697,6 +721,18 @@ $font: 'Open Sans', sans-serif;
             .it-raced-data__content {
                 align-items: center;
                 justify-content: center;
+
+                &::after {
+                    right: auto;
+                    bottom: -50px;
+                    left: 50%;
+                    text-align: center;
+                    transform: translateX(-50%);
+                    -webkit-transform: translateX(-50%);
+                    -moz-transform: translateX(-50%);
+                    -ms-transform: translateX(-50%);
+                    -o-transform: translateX(-50%);
+}
                 .it-raced-data__second-img {
                     display: none;
                 }
@@ -710,10 +746,10 @@ $font: 'Open Sans', sans-serif;
                         text-transform: uppercase;
                         font-family: $font;
                         color: $color-text;
-                        font-size: 70px;
+                        font-size: 60px;
                         font-weight: 700;
                         position: absolute;
-                        right: -113%;
+                        right: -95%;
                         top: 50%;
                         transform: translate(-50%,-50%) rotate(90deg);
                         -webkit-transform: translate(-50%,-50%) rotate(90deg);
@@ -732,22 +768,27 @@ $font: 'Open Sans', sans-serif;
         .wrapper {
             .advantage__content{
                 .wrapper__advantages {
-                    flex-wrap: wrap;
-                    justify-content: space-around;
-                    .block-advantage {
-                        width: 28%;
-                        padding: 0 3%;
-                        margin-bottom: 70px;
+                    .blocks {
+                        flex-wrap: wrap;
+                        justify-content: center;
+                        .block-advantage {
+                            flex-basis: 33%;
+                            padding: 0 3%;
+                            margin-bottom: 70px;
+                        }
                     }
+                    
                 }
                 .button {
                     margin-top: 0;
                 }
+                
             }
         }
     }
 
     .service {
+        padding-top: 40px;
         .wrapper {
             .service__content {
                 overflow: hidden;
@@ -755,12 +796,24 @@ $font: 'Open Sans', sans-serif;
                     flex-wrap: wrap;
                     justify-content: space-around;
                     .wrapper__services {
-                        margin-top: 20px;
-                        order: 2;
+                        display: flex;
+                        flex-wrap: wrap;
+                        align-items: center;
+
+                        margin-top: 40px;
+                        
                     }
                     .img {
-                        order: 1;
+                        order: 0;
                         flex-basis: 100%;
+                        margin-bottom: 20px;
+                    }
+                    .first-column {
+                        order:1; 
+                    }
+
+                    .second-column {
+                        order: 2;
                     }
                 }
             }
@@ -768,6 +821,7 @@ $font: 'Open Sans', sans-serif;
     }
 
     .contact {
+        padding-bottom: 40px;
         .contact__content {
             justify-content: center;
         }
@@ -775,6 +829,18 @@ $font: 'Open Sans', sans-serif;
             display: none;
         }
 
+    }
+
+    .footer {
+        .footer-block {
+            .footer__navigation {
+                margin: 0 auto;
+                width: 50%;
+            }
+        }
+        .footer-description {
+            .text {margin-right: auto;}
+        }
     }
 }
 
@@ -787,15 +853,27 @@ $font: 'Open Sans', sans-serif;
             }
             #menu__toggle:checked ~ .menu__btn > span {
                 transform: rotate(45deg);
-            }
+                -webkit-transform: rotate(45deg);
+                -moz-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                -o-transform: rotate(45deg);
+}
             #menu__toggle:checked ~ .menu__btn > span::before {
                 top: 0;
                 transform: rotate(0);
-            }
+                -webkit-transform: rotate(0);
+                -moz-transform: rotate(0);
+                -ms-transform: rotate(0);
+                -o-transform: rotate(0);
+}
             #menu__toggle:checked ~ .menu__btn > span::after {
                 top: 0;
                 transform: rotate(90deg);
-            }
+                -webkit-transform: rotate(90deg);
+                -moz-transform: rotate(90deg);
+                -ms-transform: rotate(90deg);
+                -o-transform: rotate(90deg);
+}
             #menu__toggle:checked ~ .header__navigation {
                 visibility: visible;
                 right: 0;
@@ -817,13 +895,16 @@ $font: 'Open Sans', sans-serif;
     transition: 0.5s ease-in-out;
         .navigation__list {
             flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        width: 70%;
-        background: #fff;
-        margin-left: auto;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            width: 70%;
+            background: #fff;
+            margin-left: auto;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+            .list__item {
+                margin-bottom: 30px;
+            }
         }
     }
 
@@ -839,6 +920,14 @@ $font: 'Open Sans', sans-serif;
                 align-items: flex-end;
                 justify-content: start;
 
+                &::after {
+                    bottom: -60px;
+                    max-width: 224px;
+                    left:0;
+                    right: auto;
+                    font-size: 14px;
+                    transform: translateX(-2%);
+                }
                 .it-raced-data__first-img {
                     width: 80%;
                     height: 70%;
@@ -857,8 +946,10 @@ $font: 'Open Sans', sans-serif;
             .advantage__content {
                 .wrapper__advantages {
                     position: relative;
+                    margin-top: 40px;
 
                     .left-arrow {
+                        display: block;
                         position: absolute;
                         left: 0;
                         cursor:pointer;
@@ -871,6 +962,7 @@ $font: 'Open Sans', sans-serif;
 }
 
                     .right-arrow {
+                        display: block;
                         position: absolute;
                         right: 0;
                         cursor:pointer;
@@ -903,11 +995,6 @@ $font: 'Open Sans', sans-serif;
                             top: -10px;
                         }
 
-                        &:hover::before {
-                            top:-10px;
-                            width: 50%;
-                        }
-
                         .block-advantage__paragraph {
                             width: 200px;
                             margin: auto;
@@ -921,8 +1008,7 @@ $font: 'Open Sans', sans-serif;
                         &.next {
                             position: absolute;
                             
-                            
-}
+                        }
                         
                         &.to-left {
                             animation-name: left;
@@ -960,23 +1046,28 @@ $font: 'Open Sans', sans-serif;
             .service__content {
                 .service-content__section {
                     position: relative;
+                    min-height: 110px;
                     .arrow-left {
+                        display:block;
                         position: absolute;
                         left: 0;
                         cursor:pointer;
                         top: 50%;
                         transform: translateY(-50%);
+                        z-index: 2;
                         -webkit-transform: translateY(-50%);
                         -moz-transform: translateY(-50%);
                         -ms-transform: translateY(-50%);
                         -o-transform: translateY(-50%);
                     }
                     .arrow-right{
+                        display:block;
                         position: absolute;
                         right: 0;
                         cursor:pointer;
                         top: 50%;
                         transform: translateY(-50%);
+                        z-index: 2;
                         -webkit-transform: translateY(-50%);
                         -moz-transform: translateY(-50%);
                         -ms-transform: translateY(-50%);
@@ -986,22 +1077,48 @@ $font: 'Open Sans', sans-serif;
                         display: none;
                     }
 
+                    .first-column, .second-column{
+                        position: absolute;
+                        top: 0;
+                        left:0;
+                        width: 100%;
+                    }
+
                     .wrapper__services{
+                        .first-column, .second-column {
+                            display: flex;
+                        }
+                        .service__item{
+                            margin-bottom: 0;
+                            flex-direction: column;
+                            align-items: center;
+                            .service-item__title {
+                                text-align: center;
+                            }
+
+                            .service-item__subtitle {
+                                text-align: center;
+                            }
+                        }
                         .service__item {
                             display: none;
                             position: relative;
                             animation: 0.5s ease-in-out;
-
+                            margin: 0 auto;
+                            
                             &.active, &.next {
                                 display: flex;
+                                justify-content: center;
                                 align-items: center;
+                                margin-bottom: 0;
+                                
                             }
-                            
+
                             &.next {
                                 position: absolute;
-                                
-                                
-    }
+                                top: 0;
+                                width: 100%;
+                            }
                             
                             &.to-left {
                                 animation-name: left;
@@ -1029,7 +1146,13 @@ $font: 'Open Sans', sans-serif;
         }
     }
 
+    .advantage .wrapper .advantage__content .wrapper__advantages .blocks .block-advantage {
+        margin-bottom: 0;
+    }
+
     .contact{
+        padding-top: 30px;
+        padding-bottom: 30px;
         .contact__content {
             .contact__img {
                 display: none;
@@ -1039,6 +1162,13 @@ $font: 'Open Sans', sans-serif;
                 width: 100%;
                 .input {
                     flex-basis: 100%;
+                }
+
+                .button{
+                    width:80%;
+                    padding-bottom: 20px;
+                    padding-top: 20px;
+                    font-size: 18px;
                 }
             }
         }   
@@ -1052,10 +1182,11 @@ $font: 'Open Sans', sans-serif;
             text-align: center;
             .footer__navigation {
                 width:100%;
-                margin-top: 30px;
+                margin-top: 45px;
             }
             .button {
                 margin: 20px auto 0;
+                padding: 15px 20px;
             }
 
             &::before {
@@ -1068,8 +1199,7 @@ $font: 'Open Sans', sans-serif;
         .footer-description {
             flex-direction: column;
             .left-block {
-                margin-top:10px;
-                margin-bottom: 10px;
+                margin:20px 0;
                 display: flex;
                 width: 100%;
                 align-items: center;
@@ -1078,16 +1208,31 @@ $font: 'Open Sans', sans-serif;
                 .socials {
                     display: flex;
                     order: 1;
+                    margin-bottom: 0;
                 }
 
                 .span{
                     
-                    max-width:97px;
+                    max-width:105px;
                 }
             }
             .text{
                 order:1;
                 width: 100%;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                margin: 20px auto 0;
+                span:first-child {
+                    order: 2;
+                    padding: 0;
+                }
+
+                span:last-child {
+                    order:1;
+                    flex-basis: 100%;
+                    padding: 0;
+                }
             }
 
             .right-block {
